tests/syntax/invalid/curly-eof.ama
# <input>:1:4 unexpected end of file
foo{